--- a/src/components/common/Navbar/Navbar.css
+++ b/src/components/common/Navbar/Navbar.css
@@ -1,7 +1,8 @@
 .navbar-header {
   position: fixed;
-  width: 100%;
+  width: 80%;
   height: 100px;
+  left: 7%;
 }
 
 .navbar-logo {
@@ -18,7 +19,9 @@
 }
 
 .navbar-items-container {
+  display: flex;
   flex: 1;
+  justify-content: flex-end;
 }
 
 .navbar-items-container a {
@@ -41,11 +44,12 @@
   transform-origin: center center;
 }
 
+.navbar-items-container a.active,
 .navbar-items-container a:hover {
   color: white;
-  text-decoration: none;
 }
 
+.navbar-items-container a.active:after,
 .navbar-items-container a:hover:after {
   transform: scaleX(1);
   visibility: visible;
@@ -53,12 +57,10 @@
 }
 
 .navbar-items-container ul {
+  display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
 }
 
 .navbar-items-container li {
