--- a/src/components/common/Navbar/Navbar.css
+++ b/src/components/common/Navbar/Navbar.css
@@ -21,7 +21,7 @@
 .navbar-items-container {
   display: flex;
   flex: 1;
-  justify-content: flex-start;
+  justify-content: flex-end;
   margin-left: 32px;
 }
 
