--- a/src/components/pages/blog/BlogPage.css
+++ b/src/components/pages/blog/BlogPage.css
@@ -21,10 +21,35 @@
 
 .blog p {
   white-space: pre-line;
-  font-size: larger;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji';
+  font-size: 16px;
+  line-height: 1.5;
+  word-wrap: break-word;
 }
 
 .blog-date {
   margin-bottom: 8px;
   font-size: x-small;
+}
+
+.blog {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji';
+  font-size: 16px;
+  line-height: 1.5;
+  word-wrap: break-word;
+}
+
+.blog code {
+  padding: 0.2em 0.4em;
+  margin: 0;
+  font-size: 85%;
+  background-color: rgba(175, 184, 193, 0.2);
+  border-radius: 6px;
+}
+
+.blog a {
+  color: #0969da;
+  text-decoration: none;
 }
