--- a/src/components/pages/blog/BlogPage.css
+++ b/src/components/pages/blog/BlogPage.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: white; */
+  height: 100vh;
 }
 
 .blog {
@@ -23,20 +23,20 @@
   white-space: pre-line;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji';
-  font-size: 16px;
+  font-size: 1em;
   line-height: 1.5;
   word-wrap: break-word;
 }
 
 .blog-date {
   margin-bottom: 8px;
-  font-size: x-small;
+  font-size: 0.8em;
 }
 
 .blog {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji';
-  font-size: 16px;
+  font-size: 1em;
   line-height: 1.5;
   word-wrap: break-word;
 }
@@ -52,4 +52,16 @@
 .blog a {
   color: #0969da;
   text-decoration: none;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .blog {
+    width: 80%;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 1200px) {
+  .blog {
+    width: 70%;
+  }
 }
