Update css related to height issue on the phone

--- a/src/components/pages/blog/BlogPage.css
+++ b/src/components/pages/blog/BlogPage.css
@@ -55,6 +55,10 @@
   text-decoration: none;
 }
 
+.empty-block {
+  margin-top: 50px;
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
   .blog {
     width: 80%;
