--- a/src/components/pages/blog/BlogPage.css
+++ b/src/components/pages/blog/BlogPage.css
@@ -21,6 +21,12 @@
   color: black;
 }
 
+.blog h2 {
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+}
+
 .blog p {
   white-space: pre-line;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
@@ -54,6 +60,10 @@
 .blog a {
   color: #0969da;
   text-decoration: none;
+}
+
+.blog a:hover {
+  text-decoration: underline;
 }
 
 .empty-block {
