--- a/src/components/pages/findprofessional/FindProfessionalPage.css
+++ b/src/components/pages/findprofessional/FindProfessionalPage.css
@@ -11,7 +11,6 @@
   padding-top: 1px;
   padding-left: 64px;
   padding-right: 64px;
-  flex: 1;
 }
 
 .header-introduction-title {
@@ -45,4 +44,20 @@
   text-align: center;
   color: gray;
   font-size: 14px;
+}
+
+.source {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  padding-left: 96px;
+  margin-top: 16px;
+}
+
+.source-title {
+  font-weight: bold;
+}
+
+.source-element {
+
 }
