--- a/src/main.css
+++ b/src/main.css
@@ -1,19 +1,23 @@
 .container {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background-color: rgb(30, 30, 30);
+  min-height: 100vh;
 }
 
 .container-main {
-  /* margin-top the size of navbar */
-  margin-top: 10vh;
-  height: 90vh;
+  margin-top: 70px;
+  /* same as navbar height */
+  min-height: calc(100vh - 70px);
 }
 
 span,
 h1 {
   color: white;
+}
+
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  background-color: rgb(30, 30, 30);
 }
